-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 4.15.2, Qt Creator 5.0.0
-
None
-
-
27f0dd134f13854d948f7f25e94cce12a40d82b1 (qt-creator/tqtc-qt-creator/5.0)
I have created a cmake build for my project, so I have spent two weeks creating/editing cmake files, and sometimes, when the cmake code was not correct, eg syntax error or simply when the configuration failed with exit status code 1, then cmake configure ended in an infinite loop. But as soon as I corrected the problem in the cmake file, the configure was successful.
I'm reporting it this way, because I don't have exact steps on how to reproduce it, I have tried hard to find steps on how to reproduce it, but I was not successful.
The problem is that the code that caused an infinite loop on the next try to reproduce this problem simply throws CMake process exited with exit code 1. and doesn't cause an infinite loop.
I'm almost sure that it will be related to the CMake package-manager auto-setup and vcpkg.
This problem always occurred in the project with the vcpkg.json file. I'm attaching the example vcpkg.json file as a fast example.
From my personal view, it looked like that configure of the project exited with exit code1, with the following message CMake process exited with exit code 1. and there was still running vcpkg in another process and somehow because of that, it ran in the loop, but I can be wrong and the problem can be in something else.
On Linux exists a very similar issue which is 100% reproducible and I believe they have a common source of the problem, I have reported that issue at QTCREATORBUG-26204
- relates to
-
QTCREATORBUG-26204 CMake configure runs in an infinite loop (linux)
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-26207 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
368218,2 | CMakePM: Do not treat generated files as project files | 5.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |